terraform/bootstrap/gateway-api/argocd-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy
  listeners:
  - name: https
    protocol: HTTPS
    port: 443

    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: argocd-tls

    allowedRoutes:
      namespaces:
        from: All
