terraform/bootstrap/gateway-api/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: argocd-route
  namespace: argocd

spec:

  parentRefs:
  - name: public-gateway
    namespace: envoy-gateway-system

  hostnames:
  - argocd.challan.pro

  rules:

  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: argocd-server
      port: 80
